# zia

./: CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt  setup_modules.sh  setup_unix.sh  unit_test
Zia-Docs/: Doxyfile  README.md
Zia-Docs/docs/: server_flow.drawio  server_module_api.drawio
Zia-Docs/include/zia/: Zia.hpp
Zia-Docs/include/zia/module/: ConnectionWrapper.hpp  Handler.hpp  Logger.hpp  Parser.hpp
certificate/: cert.pem  key.pem
config/: .default_config.json  default.json
html/: index.html  styles.css
json/: CMakeLists.txt  array.hpp  conf.hpp  main.cpp  object.hpp
modules/Get/: CMakeLists.txt  Get.cpp  Get.hpp  setup_windows.ps1
modules/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  setup_windows.ps1
modules/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  README.md  setup_unix.sh
modules/phpCgi/: CMakeLists.txt  conanfile.txt  phpCgi.cpp  phpCgi.hpp  setup_unix.sh
modules/ssl/: CMakeLists.txt  SSL.cpp  SSL.hpp  conanfile.py  conanfile.txt  setup_unix.sh
src/: main.cpp
src/common/: Configuration.cpp
src/common/include/: Configuration.hpp  ZiaError.hpp  ZiaPipeLineTask.hpp
src/context/include/: Context.hpp  HttpContext.hpp
src/library_loader/include/: ILoader.hpp  Loader.hpp
src/request/include/: Request.hpp
src/response/include/: Response.hpp
src/server/: SignalHandler.cpp  SignalHandler.hpp  ZiaClient.hpp  ZiaCore.cpp  ZiaCore.hpp
src/server/Logger/: BasicClientOutputLogger.hpp  BasicOutputLogger.hpp
src/server/Network/include/: TcpConnection.hpp  TcpSocket.hpp
src/server/Network/src/: TcpConnection.cpp
src/thread/include/: IThread.hpp  Thread.hpp
tests/: unit_tests.cpp
